terraform/ekscluster.tf
resource "aws_iam_role" "eksterraformcluster" {
  name = "eksterraformcluster"

  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
POLICY
}

resource "aws_iam_role_policy_attachment" "eksterraformcluster-AmazonEKSClusterPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role       = aws_iam_role.eksterraformcluster.name
}

resource "aws_iam_role_policy_attachment" "eksterraformcluster-AmazonEKSServicePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSServicePolicy"
  role       = aws_iam_role.eksterraformcluster.name
}

resource "aws_security_group" "eksterraformcluster" {
  name        = "eksterraformcluster"
  description = "Cluster communication with worker nodes"
  vpc_id      = aws_vpc.eksvpc.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eksterraformcluster"
  }
}

resource "aws_security_group_rule" "eksterraformcluster-ingress-workstation-https" {
  cidr_blocks       = ["0.0.0.0/0"]
  description       = "Allow workstation to communicate with the cluster API Server"
  from_port         = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.eksterraformcluster.id
  to_port           = 443
  type              = "ingress"
}

resource "aws_eks_cluster" "eksterraformcluster" {
  name     = var.cluster-name
  role_arn = aws_iam_role.eksterraformcluster.arn

  vpc_config {
    security_group_ids = [aws_security_group.eksterraformcluster.id]
    subnet_ids         = aws_subnet.ekssubnet[*].id
  }

  depends_on = [
    aws_iam_role_policy_attachment.eksterraformcluster-AmazonEKSClusterPolicy,
    aws_iam_role_policy_attachment.eksterraformcluster-AmazonEKSServicePolicy,
  ]
}
